force-app/main/default/objects/Contract/fields/Auto_Renewal_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Whether this Contract should auto-spawn a renewal Opportunity via the renewal-creation job. Defaults true; uncheck for opt-out customers. Read in conjunction with Days_To_Renewal__c.</description>
    <inlineHelpText
  >Auto-create a renewal Opp when the contract nears its end date.</inlineHelpText>
    <label>Auto Renewal Enabled</label>
    <type>Checkbox</type>
</CustomField>