force-app/main/default/objects/Contract/fields/Customer_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The CSM owning the post-sale relationship for this Contract. Set on Contract creation (typically from a routing rule keyed on Account.Customer_Segment__c + Account.Region__c) and used by renewal/escalation alerts.</description>
    <inlineHelpText
  >The Customer Success Manager owning this account post-sale.</inlineHelpText>
    <label>Customer Success Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CSM Contracts</relationshipLabel>
    <relationshipName>CSM_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>