force-app/main/default/objects/Contract/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <description
  >Per-contract customer health score (0-100). Mirrors Account.Health_Score__c at Contract creation, then drifts independently as the CSM revises it for this contract. Read by the renewal-risk evaluation.</description>
    <inlineHelpText
  >0-100. Higher is healthier. Maintained by CS.</inlineHelpText>
    <label>Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>