force-app/main/default/objects/Contract/fields/Implementation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The IM owning the implementation/onboarding engagement on this Contract. Set when Implementation_Package__c on the source Opp/Order is non-None. Used by the onboarding Action Plan flow to assign tasks.</description>
    <inlineHelpText
  >The Implementation Manager owning the onboarding engagement.</inlineHelpText>
    <label>Implementation Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Implementation Contracts</relationshipLabel>
    <relationshipName>Implementation_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>