force-app/main/default/objects/Contract/fields/Renewal_Created__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Idempotency guard for the renewal-creation job: true once a renewal Opportunity has been spawned for this Contract. Prevents duplicate renewal Opps on re-run.</description>
    <inlineHelpText
  >Set automatically once a renewal Opportunity has been created. Do not edit.</inlineHelpText>
    <label>Renewal Created</label>
    <type>Checkbox</type>
</CustomField>