force-app/main/default/objects/Contract/fields/Renewal_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Created_Date__c</fullName>
    <description
  >The date the renewal-creation job spawned the renewal Opportunity. Distinct from Renewal_Opportunity__c.CreatedDate (which gets touched by manual edits); this is the canonical "renewal was attempted" marker.</description>
    <inlineHelpText
  >When the renewal job ran. Auto-stamped — do not edit.</inlineHelpText>
    <label>Renewal Created Date</label>
    <type>Date</type>
</CustomField>