force-app/main/default/objects/Contract/fields/Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The renewal Opportunity that the renewal-creation job spawned from this Contract. Inverse of Opportunity.Renewal_Source_Contract__c. Null until the renewal has been created.</description>
    <inlineHelpText
  >The renewal Opportunity created from this Contract.</inlineHelpText>
    <label>Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Renewal Source Contracts</relationshipLabel>
    <relationshipName>Renewal_Source_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>