force-app/main/default/objects/Contract/fields/Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Source_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The closed-won Opportunity that produced this Contract. Populated by the Contract-creation flow from Order.Source_Opportunity__c. Used for revenue lineage and the renewal chain.</description>
    <inlineHelpText
  >The Opportunity this Contract was generated from.</inlineHelpText>
    <label>Source Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Source Contracts</relationshipLabel>
    <relationshipName>Source_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>