force-app/main/default/objects/Contract/fields/Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_End_Date__c</fullName>
    <description
  >Last day of paid service on this Contract (inclusive). Mirrored from Opportunity.Subscription_End_Date__c on Contract creation; the renewal-evaluation job reads it to drive Days_To_Renewal__c.</description>
    <inlineHelpText
  >Last day of paid service. Drives the renewal window.</inlineHelpText>
    <label>Subscription End Date</label>
    <type>Date</type>
</CustomField>