force-app/main/default/objects/Contract/fields/Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date__c</fullName>
    <description
  >First day of paid service on this Contract. Distinct from the standard Contract.StartDate (which is the contract effective date — they often match but don't have to). Mirrored from Opportunity.Subscription_Start_Date__c on Contract creation.</description>
    <inlineHelpText>First day of paid service.</inlineHelpText>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>