force-app/main/default/objects/Contract/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <description
  >Entitled support tier under this Contract. Backed by Northstar_Support_Tier GVS. Mirrored from Order.Support_Tier__c on Contract creation and read by Case routing to set SLA.</description>
    <inlineHelpText>Entitled support tier under this Contract.</inlineHelpText>
    <label>Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Support_Tier</valueSetName>
    </valueSet>
</CustomField>