force-app/main/default/objects/Contract/recordTypes/Renewal_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Renewal_Agreement</fullName>
    <active>true</active>
    <description
  >Contract spawned by the renewal-creation job. References the prior contract via Source_Opportunity__c chain.</description>
    <label>Renewal Agreement</label>
</RecordType>