force-app/main/default/objects/Contract/recordTypes/Services_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Services_Agreement</fullName>
    <active>true</active>
    <description
  >Services-only contract (implementation, training).</description>
    <label>Services Agreement</label>
</RecordType>