force-app/main/default/objects/Contract/recordTypes/Subscription_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Subscription_Agreement</fullName>
    <active>true</active>
    <description
  >Subscription contract for Core Platform + add-ons.</description>
    <label>Subscription Agreement</label>
</RecordType>