force-app/main/default/objects/Contract/listViews/Renewing_In_90_Days.listView-meta.xml
<ListView>
    <fullName>Renewing_In_90_Days</fullName>
    <booleanFilter>1 AND ((2 OR 3) OR (4 AND (5 OR 6))) AND 7 AND 8 AND 9</booleanFilter>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Subscription_End_Date__c</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>Days_To_Renewal__c</columns>
    <columns>Auto_Renewal_Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>Subscription_End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Subscription_End_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:90</value>
    </filters>
    <filters>
        <field>Subscription_End_Date__c</field>
        <operation>equals</operation>
        <value></value>
    </filters>
    <filters>
        <field>CONTRACT.END_DATE</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CONTRACT.END_DATE</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:90</value>
    </filters>
    <filters>
        <field>Renewal_Created__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Renewal_Opportunity__c</field>
        <operation>equals</operation>
        <value></value>
    </filters>
    <filters>
        <field>Auto_Renewal_Enabled__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Renewing In 90 Days</label>
</ListView>